# securedrop

./: .dockerignore  .editorconfig  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .lgtm.yml  .mailmap  .ruby-gemset  .srcclr.json  .travis.yml  .yamllint  CODE_OF_CONDUCT.md  CONFIG_OPTIONS  CONTRIBUTING.md  Cargo.toml  ENVIRONMENT_INSTALL  Gemfile  HACKING.md  INSTALL  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README  README.md  Rakefile  SECURITY.md  SOURCE_OFFER  Vagrantfile  _genwordlist.py  admin  ansible.cfg  ansible_vars.json  babel.cfg  build_deb_packages.sh  ca_openssl.cnf  changelog.md  chroot-dev  circle.yml  (+38 more)
.cargo/: audit.toml
.circleci/: config.yml
.githooks/: pre-commit
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
admin/: .dockerignore  .gitignore  Dockerfile  Makefile  README.rst  bootstrap.py  requirements-ansible.in  requirements-dev.in  requirements-dev.txt  requirements-testinfra.in  requirements-testinfra.txt  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
admin/securedrop_admin/: __init__.py
admin/tests/: test_integration.py  test_securedrop-admin-setup.py  test_securedrop-admin.py
admin/tests/files/: ca.crt  key.asc  sd_admin_test.pub  site-specific  site-specific-missing-entries  weak_test_key_should_fail_sqlinter.asc
admin/tests/files/securedrop/: i18n.json
ansible/: build-deb-pkgs.yml
builder/: Dockerfile  OSSEC-ARCHIVE-KEY.asc  build-debs-ossec.sh  build-debs-securedrop.sh  build-debs.sh  dep-check.sh  fixup-changelog.sh  image_prep.sh
chroot/: README.md  init_dev.sh  restart_servers.sh  setup_chroot.sh  sources.list
debian/: control  copyright  debhelper-build-stamp  files  postinst  rules  securedrop-app-code.install  securedrop-app-code.links  securedrop-app-code.postinst.debhelper
dev_files/: schroot.conf
devops/: ansible_env  apt-local.yml  clean  create-staging-env  generate-self-signed-https-certs.sh
docs/: .gitignore  0.2.1-upgrade-to-0.3.3.md  0.2.1-upgrade-to-0.3.3.rst  0.2.1-upgrade-to-0.3.x.md  0.2.1-upgrade-to-0.3.x.rst  0.3-pre-upgrade-to-0.3.3.md  0.3-pre-upgrade-to-0.3.3.rst  0.3-pre-upgrade-to-0.3.x.md  0.3-pre-upgrade-to-0.3.x.rst  Makefile  admin.rst  admin_interface.md  admin_interface.rst  apparmor_profiles.md  apparmor_profiles.rst  aths_auto_connect.rst  backup_and_restore.rst  backup_workstations.rst  before_you_begin.rst  client.rst  conf.py  configure_admin_workstation_post_install.rst  create_admin_account.rst  create_users.rst  creating-deb.md  creating_deb.md  creating_deb.rst  decommission.rst  deployment_practices.md  deployment_practices.rst  develop.md  develop.rst  download_securedrop_repo.rst  encrypted_drive.md  full_install.md  generate_securedrop_application_key.rst  generate_submission_key.rst  getting_support.rst  getting_the_most_out_of_securedrop.rst  glossary.rst  (+80 more)
git/: pre-commit
github_helpers/: README.md  config.json.example  index.js  package.json
install/: .gitignore  LICENSE  puppet-setup.sh
install_files/: app.logs.ossec.conf  app.rules_v4  app.syscheck.ossec.conf  base-requirements.txt  base.common-auth  base.ssh_config  base.sshd_config  base.torrc  base_install.sh  chroot-requirements.txt  document-requirements.txt  document.apache2.conf  document.config.py  document.site  document.torrc  gauthmod_install.sh  gen_bcrypt_salt.py  gen_secret_key.py  host.rc.local  install_chroot.sh  install_document_specific.sh  install_gpg_mail_config.sh  install_source_specific.sh  install_tor.sh  interface-install.sh  interface_install.sh  journalist.apache2.conf  journalist.config.py  journalist.security  journalist.site  journalist.torrc  journalist.wsgi  monitor.global.ossec.conf  monitor.logs.ossec.conf  monitor.postfix-main.cf  monitor.rules_v4  monitor.syscheck.ossec.conf  mysql_install.sh  ossec_install.sh  preloaded-vars.conf  (+16 more)
journalist_gui/: Pipfile  SecureDropUpdater  dev-requirements.in  dev-requirements.txt  mainwindow.ui  requirements.txt  strings.py  test-requirements.txt  test_gui.py  updaterUI.py
journalist_templates/: base.html  col.html  index.html
manifests/: nodes.pp
molecule/: docker_hashes.yml  pytest.ini
redwood/: Cargo.toml  MANIFEST.in  build-wheel.py  pyproject.toml  redwood.pyi
redwood/redwood/: __init__.py  __init__.pyi
redwood/res/: weak_sample_key.asc  weak_sample_key_fingerprint.txt
redwood/src/: decryption.rs  keys.rs  lib.rs  stream.rs
scans/: requirements.txt  zapscan.py
securedrop/: .coveragerc  .dockerignore  .gitignore  .pylint-dictionary  .rsync-filter  DocREADME.md  Dockerfile  Dockerfile.test  HACKING.md  Makefile  README.md  __init__.py  _genwordlist.py  alembic.ini  api_v1.py  babel.cfg  background.py  benchmark.py  bulk.py  codecov.yml  config.py.example  config_tool.py  create-demo-user.py  create-dev-data.py  crypto_util.py  db.py  dev_data.py  document-requirements.txt  encryption.py  example_config.py  execution.py  forms.py  fp_defense.py  functional_tests.py  gpg_encryption.py  i18n.json  i18n.py  i18n.rst  i18n_tool.py  journalist.py  (+42 more)
snap-ci/: development-upgrade.sh  staging-upgrade.sh
snap_ci/: development_clean.sh  development_clean_parallel.sh  development_local.sh  development_upgrade.sh  env_vars.sh  pinned.sh  prod_clean.sh  snap_ci_workers.sh  staging_clean.sh  staging_upgrade.sh
source_templates/: base.html  generate.html  index.html  lookup.html  lookup_get.html  notfound.html
spec-tests/: .gemrc  Gemfile
spec_tests/: .rspec  Rakefile
supply-chain/: audits.toml  config.toml
tails_files/: .torrc.additions  .xsessionrc  65-configure-tor-for-securedrop.sh  70-tor-reload.sh  99-tor-reload.sh  README.md  SecureDrop Init.desktop  build.sh  document.desktop  install-ansible.sh  install.sh  journalist.desktop  securedrop-keepassx.kdb  securedrop-keepassx.kdbx  securedrop-keepassx.xml  securedrop_init.c  securedrop_init.py  source.desktop  torrc_additions  update_torrc  update_torrc.c  upgrade.sh
templates/: generate.html  index.html  lookup.html  lookup_get.html
testinfra/: combine-junit.py  conftest.py  requirements.in  test.py  (+2 more)
(+2405 files in other folders)
