[project]
name = "securedrop"
requires-python = ">=3.8"

[tool.black]
line-length = 100
target-version = ["py38"]
# Don't use `extend`, we want the default behavior that honors .gitignore rules

[tool.isort]
line_length = 100
profile = "black"
skip_gitignore = true

[tool.ruff]
line-length = 100
select = [
    # pycodestyle errors
    "E",
    # pyflakes
    "F",
    # pycodestyle warnings
    "W",
    # Unused noqa directive
    "RUF100",
]
ignore = [
    # incompatible with sqlalchemy https://github.com/astral-sh/ruff/issues/4560
    "E712",
]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
python_version = "3.8"
plugins = "sqlmypy"

[[tool.mypy.overrides]]
module = [
    "securedrop.tests.*",
    "admin.tests.*"
]
disallow_untyped_defs = false
