[project]
name = "securedrop"
requires-python = ">=3.8"

[tool.black]
line-length = 100
target-version = ["py38"]
# Don't use `extend`, we want the default behavior that honors .gitignore rules

[tool.isort]
line_length = 100
profile = "black"
skip_gitignore = true

[tool.ruff]
line-length = 100
select = [
    # pycodestyle errors
    "E",
    # pyflakes
    "F",
    # flake8-gettext
    "INT",
    # flake8-pie
    "PIE",
    # pylint
    "PL",
    # flake8-pyi
    "PYI",
    # flake8-return
    "RET",
    # flake8-simplify
    "SIM",
    # pycodestyle warnings
    "W",
    # Unused noqa directive
    "RUF100",
]
ignore = [
    # incompatible with sqlalchemy https://github.com/astral-sh/ruff/issues/4560
    "E712",
    # code complexity checks that we fail
    "PLR0912", "PLR0913", "PLR0915",
    # sqlalchemy false positives in tests
    "PLR0124",
    # magic-value-comparison, too many violations for now
    "PLR2004",
    # we use global variables for singletons, sorry
    "PLW0603",
    # loop assignment target being overwritten, not a big deal
    "PLW2901",
    # doesn't understand flask.abort()
    "RET503",
    # superflous-else- rules, find they hurt readability
    "RET505", "RET506", "RET507", "RET508",
    # Find contextlib.suppress() is harder to read
    "SIM105",
    # Find ternary statements harder to read
    "SIM108",
    # use context handler for opening files, too many violations for now
    "SIM115",
    # nested if and with statements, too many violations for now
    "SIM102", "SIM117",
]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
python_version = "3.8"
plugins = "sqlmypy"

[[tool.mypy.overrides]]
module = [
    "securedrop.tests.*",
    "admin.tests.*"
]
disallow_untyped_defs = false
