#
# Interpreted by pbr
#   https://pypi.python.org/pypi/pbr
#   http://docs.openstack.org/developer/pbr/
#
[metadata]
name = securedrop-admin
version = 0.1.0
summary = SecureDrop Admin Toolkit
description-file =
    README.rst
author = Loic Dachary
author-email = loic@dachary.org
home-page = https://securedrop.org
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Utilities

[files]
scripts = 
  bin/securedrop-admin
packages = securedrop_admin
